--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@natowb/ddb-parser",
-  "version": "0.0.3-alpha",
+  "version": "0.1.0",
   "description": "a parser for dnd beyond character sheet json",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@changesets/cli": "^2.27.8",
     "@jest/globals": "^29.7.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
