--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,9 @@
     "declaration": true,
     "outDir": "./dist",
     "strict": true,
-    "lib": ["esnext"]
-
+    "lib": ["esnext"],
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
   },
   "include": [
     "lib/"
